# idiap_spe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.org  CONTRIBUTING.org  README.org  THIRD-PARTY-LICENSES.txt  pyproject.toml
.github/workflows/: pre-commit.yml  unit-tests.yml
.reuse/: dep5
idiap_spe/: __init__.py  hmm.py  speech_analysis.py
idiap_spe/data/: __init__.py  hmm.py
jupyter-notebooks/: g2p.ipynb  hmm.ipynb  speech_analysis.ipynb
org-notebooks/: export.el  g2p.org  hmm.org  speech_analysis.org
tests/: __init__.py  test_g2p.py  test_hmm.py  test_speech_analysis.py
