# SPDX-FileCopyrightText: Idiap Research Institute
#
# SPDX-License-Identifier: CC0-1.0

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "idiap-spe"
version = "1.0.0"
description = "Collection of speech processing exercises."
authors = ["Enno Hermann <enno.hermann@idiap.ch>"]
readme = "README.org"
packages = [{include = "idiap_spe"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = [
    {version = "~1.22", python = "<3.11"},
    {version = "~1.26", python = ">=3.11"}
]
librosa = "^0.10.1"
matplotlib = "^3.8.0"
scipy = "^1.11.3"
jupyter = "^1.0.0"
cycler = "^0.12.1"
graphviz = "^0.20.1"
phonetisaurus = "^0.3.0"
cmudict = "^1.0.15"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"
pre-commit = "^3.5.0"
mypy = "^1.6.1"
pytest = "^7.4.2"
coverage = "^7.3.2"
reuse = "^2.1.0"
pip-licenses = "^4.3.3"

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.run]
source = ["idiap_spe", "tests"]
omit = ["idiap_spe/data/*.py"]
command_line = "-m pytest"

[[tool.mypy.overrides]]
module = [
    "cmudict",
    "graphviz",
    "scipy",
    "scipy.linalg",
    "scipy.signal",
    "scipy.stats",
    "scipy.stats._multivariate",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v"

[tool.ruff]
target-version = "py310"
select = ["ALL"]
ignore = [
    "ANN101",  # `self` type can be inferred automatically
    "COM812",  # interferes with auto-formatting
    "PTH123",  # use normal open()
    "T201",  # print() is fine
]

[tool.ruff.per-file-ignores]
# `assert` is ok in tests
"tests/*" = ["S101"]

[tool.ruff.pylint]
max-args = 6

[tool.ruff.pydocstyle]
convention = "pep257"
